--- a/analyzers/AbstractionsOnly/AbstractionsOnly.csproj
+++ b/analyzers/AbstractionsOnly/AbstractionsOnly.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.abstractions" Version="2.0.1" />
-    <PackageReference Include="xunit.analyzers" Version="0.10.0-build1210" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.2" />
+    <PackageReference Include="xunit.analyzers" Version="0.10.0" />
   </ItemGroup>
 
 </Project>
