--- a/analyzers/ExecutionExtensibility/ExecutionExtensibility.csproj
+++ b/analyzers/ExecutionExtensibility/ExecutionExtensibility.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.analyzers" Version="0.10.0-build1210" />
-    <PackageReference Include="xunit.extensibility.execution" Version="2.4.0-beta.2.build4009" />
+    <PackageReference Include="xunit.analyzers" Version="0.10.0" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.4.0" />
   </ItemGroup>
 
 </Project>
