--- a/analyzers/FullXunit/FullXunit.csproj
+++ b/analyzers/FullXunit/FullXunit.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.analyzers" Version="0.10.0-build1210" />
-    <PackageReference Include="xunit.core" Version="2.4.0-beta.2.build4009" />
-    <PackageReference Include="xunit.extensibility.core" Version="2.4.0-beta.2.build4009" />
-    <PackageReference Include="xunit.extensibility.execution" Version="2.4.0-beta.2.build4009" />
+    <PackageReference Include="xunit.analyzers" Version="0.10.0" />
+    <PackageReference Include="xunit.core" Version="2.4.0" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.0" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.4.0" />
   </ItemGroup>
 
 </Project>
