--- a/console/v2x_net452/v2x_net452.csproj
+++ b/console/v2x_net452/v2x_net452.csproj
@@ -29,8 +29,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.0-rc.1.build4038" />
-    <PackageReference Include="xunit.runner.console" Version="2.4.0-rc.1.build4038" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.console" Version="2.4.0" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
