--- a/test-explorer/v1x_net45/v1x_net45.csproj
+++ b/test-explorer/v1x_net45/v1x_net45.csproj
@@ -31,7 +31,7 @@
   <ItemGroup>
     <PackageReference Include="xunit" Version="1.9.2" />
     <PackageReference Include="xunit.extensions" Version="1.9.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-rc.1.build4038" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
