--- a/test-explorer/v2x_net452/v2x_net452.csproj
+++ b/test-explorer/v2x_net452/v2x_net452.csproj
@@ -32,8 +32,8 @@
     <CodeAnalysisRuleSet>v2x_net452.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.0-rc.1.build4038" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-rc.1.build4038" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
