--- a/test-explorer/v2x_net452_Sdk/v2x_net452_Sdk.csproj
+++ b/test-explorer/v2x_net452_Sdk/v2x_net452_Sdk.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.0-rc.1.build4038" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-rc.1.build4038" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
