--- a/analyzers/AbstractionsOnly/AbstractionsOnly.csproj
+++ b/analyzers/AbstractionsOnly/AbstractionsOnly.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <NoWarn>$(NoWarn);IDE1006</NoWarn>
-    <TargetFrameworks>net452;netcoreapp1.0;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net452;netcoreapp2.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.abstractions" Version="2.0.2" />
-    <PackageReference Include="xunit.analyzers" Version="0.10.0" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.3" />
+    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.16" />
   </ItemGroup>
 
 </Project>
