--- a/analyzers/ExecutionExtensibility/ExecutionExtensibility.csproj
+++ b/analyzers/ExecutionExtensibility/ExecutionExtensibility.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <NoWarn>$(NoWarn);IDE1006</NoWarn>
-    <TargetFrameworks>net452;netcoreapp1.0;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net452;netcoreapp2.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.analyzers" Version="0.10.0" />
-    <PackageReference Include="xunit.extensibility.execution" Version="2.4.0" />
+    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.16" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
   </ItemGroup>
 
 </Project>
