--- a/analyzers/AbstractionsOnly/AbstractionsOnly.csproj
+++ b/analyzers/AbstractionsOnly/AbstractionsOnly.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <NoWarn>$(NoWarn);IDE1006</NoWarn>
-    <TargetFrameworks>net452;netcoreapp2.1</TargetFrameworks>
+    <TargetFrameworks>net452;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="xunit.abstractions" Version="2.0.3" />
-    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.19" />
+    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.24" />
   </ItemGroup>
 
 </Project>
