--- a/analyzers/FullXunit/FullXunit.csproj
+++ b/analyzers/FullXunit/FullXunit.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <NoWarn>$(NoWarn);IDE1006;IDE0060</NoWarn>
-    <TargetFrameworks>net452;netcoreapp2.1</TargetFrameworks>
+    <NoWarn>$(NoWarn);IDE1006;IDE0060;CS0619</NoWarn>
+    <TargetFrameworks>net452;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.2-pre.12" />
-    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.19" />
+    <PackageReference Include="xunit" Version="2.4.2-pre.22" />
+    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.24" />
   </ItemGroup>
 
 </Project>
