--- a/analyzers/AbstractionsOnly/AbstractionsOnly.csproj
+++ b/analyzers/AbstractionsOnly/AbstractionsOnly.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="xunit.abstractions" Version="2.0.3" />
-    <PackageReference Include="xunit.analyzers" Version="1.1.0" />
+    <PackageReference Include="xunit.analyzers" Version="1.2.0-pre.9" />
   </ItemGroup>
 
 </Project>
