--- a/analyzers/ExecutionExtensibility/ExecutionExtensibility.csproj
+++ b/analyzers/ExecutionExtensibility/ExecutionExtensibility.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.analyzers" Version="1.1.0" />
-    <PackageReference Include="xunit.extensibility.execution" Version="2.4.2" />
+    <PackageReference Include="xunit.analyzers" Version="1.2.0-pre.9" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.5.0-pre.22" />
   </ItemGroup>
 
 </Project>
