--- a/console/v3x_netcoreapp31/v3x_netcoreapp31.csproj
+++ b/console/v3x_netcoreapp31/v3x_netcoreapp31.csproj
@@ -5,11 +5,11 @@
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.v3" Version="0.1.1-pre.85" />
+    <PackageReference Include="xunit.v3" Version="0.1.1-pre.227" />
   </ItemGroup>
 
   <Target Name="Test" AfterTargets="Build">
