--- a/analyzers/FullXunit/FullXunit.csproj
+++ b/analyzers/FullXunit/FullXunit.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <NoWarn>$(NoWarn);IDE1006;IDE0060;CS0619</NoWarn>
+    <Nullable Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">enable</Nullable>
     <TargetFrameworks>net452;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
