--- a/analyzers/.editorconfig
+++ b/analyzers/.editorconfig
@@ -31,6 +31,7 @@ dotnet_diagnostic.xUnit1028.severity = warning
 dotnet_diagnostic.xUnit1029.severity = warning
 dotnet_diagnostic.xUnit1030.severity = warning
 dotnet_diagnostic.xUnit1031.severity = warning
+dotnet_diagnostic.xUnit1032.severity = warning
 dotnet_diagnostic.xUnit1033.severity = warning
 
 dotnet_diagnostic.xUnit2000.severity = warning
