--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,10 +1,10 @@
 <Project>
 
   <PropertyGroup>
-    <XunitAnalyzersVersion>1.3.0-pre.18</XunitAnalyzersVersion>
-    <XunitV2Version>2.5.1-pre.22</XunitV2Version>
-    <XunitV3Version>0.1.1-pre.271</XunitV3Version>
-    <XunitRunnerVSVersion>2.5.1-pre.8</XunitRunnerVSVersion>
+    <XunitAnalyzersVersion>1.3.0</XunitAnalyzersVersion>
+    <XunitV2Version>2.5.1</XunitV2Version>
+    <XunitV3Version>0.1.1-pre.279</XunitV3Version>
+    <XunitRunnerVSVersion>2.5.1</XunitRunnerVSVersion>
   </PropertyGroup>
 
 </Project>
