--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,9 @@
 <Project>
 
   <PropertyGroup>
-    <XunitAnalyzersVersion>1.4.0</XunitAnalyzersVersion>
-    <XunitV2Version>2.5.2</XunitV2Version>
-    <XunitV3Version>0.1.1-pre.288</XunitV3Version>
+    <XunitAnalyzersVersion>1.5.0-pre.6</XunitAnalyzersVersion>
+    <XunitV2Version>2.6.1</XunitV2Version>
+    <XunitV3Version>0.1.1-pre.313</XunitV3Version>
     <XunitRunnerVSVersion>2.5.3</XunitRunnerVSVersion>
   </PropertyGroup>
 
