--- a/analyzers/.editorconfig
+++ b/analyzers/.editorconfig
@@ -62,6 +62,7 @@ dotnet_diagnostic.xUnit2017.severity = warning
 dotnet_diagnostic.xUnit2018.severity = warning
 dotnet_diagnostic.xUnit2020.severity = warning
 dotnet_diagnostic.xUnit2021.severity = warning
+dotnet_diagnostic.xUnit2022.severity = warning
 
 dotnet_diagnostic.xUnit3000.severity = warning
 dotnet_diagnostic.xUnit3001.severity = warning
